--- a/app/src/main/res/layout/item_slide_delete_edit.xml
+++ b/app/src/main/res/layout/item_slide_delete_edit.xml
@@ -49,9 +49,25 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="29dp"
                 android:layout_marginRight="29dp"
+                android:checked="false"
                 android:switchMinWidth="10dp"
+                android:textOff="关"
+                android:textOn="开"
                 android:track="@android:drawable/button_onoff_indicator_on"
                 tools:checked="false" />
+
+            <TextView
+                android:id="@+id/switch1Status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/switch1"
+                android:layout_marginEnd="6dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginBottom="2dp"
+                android:layout_toStartOf="@+id/switch1"
+                android:layout_toLeftOf="@+id/switch1"
+                android:text="开"
+                android:textSize="18sp" />
 
             <!--<Switch-->
                 <!--android:id="@+id/switch1"-->
